--- a/my-next-app/tsconfig.json
+++ b/my-next-app/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/controllers/invoiceControllers/Invoice.controllers.jsx", "src/app/api/invoice/salesreport/route.jsx", "src/app/products/page.jsx", "src/app/sales-report/page.jsx", "src/app/api/customer/getcustomer/[customerId]/route.jsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/lib/controllers/invoiceControllers/Invoice.controllers.jsx", "src/app/api/invoice/salesreport/route.jsx", "src/app/products/page.jsx", "src/app/sales-report/page.jsx", "src/app/api/customer/getcustomer/[customerId]/route.jsx", "src/app/top-sold/page.jsx"],
   "exclude": ["node_modules"]
 }
