--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -14,6 +14,7 @@
     "@mui/material": "^7.0.2",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.503.0",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
