--- a/my-next-app/package.json
+++ b/my-next-app/package.json
@@ -20,6 +20,7 @@
     "lucide-react": "^0.503.0",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
+    "nodemailer": "^7.0.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
